# ActionsDemo

./: CMakeLists.txt  main.cpp
.github/workflows/: Test-My-Dispatch.yml  cmake-multi-platform-test.yml  cmake-single-platform.yml  codeql.yml  docker-publish.yml  test_dispatch.yml  test_workflow_dispatch.yml  workflow_dispatch_demo.yml
